<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="ProgramSequence" Id="{57073d3a-1ff5-4cda-8931-755335b396bf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ProgramSequence
VAR
	X: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT GVL.System_Start_Stop THEN
	X := 10;
	GVL.Motor1_State := 0;
	GVL.Motor2_State := 0;	
END_IF

	CASE X OF
0: IF NOT GVL.Motor1_State THEN
 	GVL.Motor1_State := 1;
	X := 1;
	END_IF
	
1: IF GVL.SensorInput := 1 THEN
	GVL.Motor2_Direction := 0;
	GVL.Motor2_State := 1;
	GVL.ProductA_Amount := GVL.ProductA_Amount + 1;
	X := 2;
	ELSIF GVL.SensorInput := 2 THEN
	GVL.Motor2_Direction := 1;
	GVL.Motor2_State := 1;
	X := 2;
	GVL.ProductB_Amount := GVL.ProductB_Amount + 1;
	END_IF
	
2: 	GVL.Motor1_State := 0;
	IF GVL.Conveyor2_Free THEN
	X := 0;
	END_IF
	END_CASE
]]></ST>
    </Implementation>
    <LineIds Name="ProgramSequence">
      <LineId Id="5" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="85" Count="1" />
      <LineId Id="75" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="70" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="48" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>